chore: rename project to wasm_image_compressor and update version to 1.0.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wasm-rust",
-  "version": "0.0.1",
+  "name": "wasm_image_compressor",
+  "version": "1.0.1",
   "private": false,
   "license": "MIT",
   "repository": {
