--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "private": false,
   "license": "MIT",
+  "main": "index.js",
+  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/falcosan/wasm_image_compressor"
