--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "1.1.1",
   "private": false,
   "license": "MIT",
-  "main": "index.js",
-  "types": "index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/falcosan/wasm_image_compressor"
   },
   "scripts": {
-    "postinstall": "cd wasm && wasm-pack build --target web --release"
+    "dev": "nuxt dev",
+    "dev:wasm": "npm run wasm:bundle && npm run dev",
+    "build": "nuxt build",
+    "preview": "nuxt preview",
+    "generate": "nuxt generate",
+    "postinstall": "nuxt prepare && npm run wasm:bundle",
+    "wasm:bundle": "cd wasm && wasm-pack build --target web --release",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "nuxt": "^3.15.1"
+  },
+  "devDependencies": {
+    "@iconify-json/simple-icons": "^1.2.19",
+    "@nuxt/eslint": "^0.7.5",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@vueuse/nuxt": "^12.4.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0"
   }
 }
