--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -9,17 +9,16 @@
   },
   "scripts": {
     "dev": "nuxt dev",
-    "dev:wasm": "npm run wasm:bundle && npm run dev",
     "build": "nuxt build",
     "preview": "nuxt preview",
     "generate": "nuxt generate",
-    "postinstall": "nuxt prepare && npm run wasm:bundle",
-    "wasm:bundle": "cd wasm && wasm-pack build --target web --release",
+    "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "nuxt": "^3.15.1"
+    "nuxt": "^3.15.1",
+    "wasm_image_compressor": "^1.1.8"
   },
   "devDependencies": {
     "@iconify-json/simple-icons": "^1.2.19",
