--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm_image_compressor"
-version = "1.1.8"
+version = "1.2.2"
 edition = "2021"
 description = "wasm_image_compressor"
 authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
@@ -39,4 +39,4 @@ codegen-units = 1
 panic = "abort"
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-Oz", "--enable-mutable-globals"]
+wasm-opt = ["-Oz"]
