--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "nuxt": "^3.15.1",
-    "wasm_image_compressor": "^1.2.3"
+    "wasm_image_compressor": "file:./wasm/pkg"
   },
   "devDependencies": {
     "@iconify-json/simple-icons": "^1.2.19",
