--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "wasm_image_compressor"
-version = "1.2.3"
+version = "1.3.0"
 edition = "2021"
 description = "wasm_image_compressor"
 authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
-license = "MIT OR Apache-2.0"
+license = "MIT"
 repository = "https://github.com/falcosan/wasm_image_compressor"
 
 [lib]
@@ -12,7 +12,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2.99"
-pixlzr = "0"
+pixlzr = "0.3.1"
 image = "0.25.5"
 js-sys = "0.3.76"
 thiserror = "1.0.61"
