--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -15,7 +15,8 @@
     "generate": "nuxt generate",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "publish": "cd wasm/pkg && npm publish"
   },
   "dependencies": {
     "nuxt": "^3.15.1",
