--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -16,7 +16,7 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "publish": "cd wasm/pkg && npm publish"
+    "publish": "npm run build:wasm && cd wasm/pkg && npm publish"
   },
   "dependencies": {
     "nuxt": "^3.15.1",
