feat: update README and code to support image compression from URL and Uint8Array input types; bump version to 1.3.6

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.3.5",
+  "version": "1.3.6",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "dev": "nuxt dev",
-    "build": "nuxt build",
     "build:wasm": "./build.sh",
+    "build": "npm run build:wasm && nuxt build",
     "preview": "nuxt preview",
     "generate": "nuxt generate",
     "postinstall": "nuxt prepare",
