--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wasm_image_compressor",
-  "version": "1.3.8",
+  "version": "1.4.0",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -20,7 +20,6 @@
     "publish": "npm run build:wasm && cd wasm/pkg && npm publish"
   },
   "dependencies": {
-    "nuxt": "^3.15.1",
     "wasm_image_compressor": "file:./wasm/pkg"
   },
   "devDependencies": {
@@ -29,6 +28,7 @@
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vueuse/nuxt": "^12.4.0",
     "eslint": "^9.18.0",
-    "eslint-config-prettier": "^9.1.0"
+    "eslint-config-prettier": "^9.1.0",
+    "nuxt": "^3.15.1"
   }
 }
