feat: refactor image conversion logic and introduce compression module; update dependencies

--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -11,12 +11,13 @@ repository = "https://github.com/falcosan/wasm_image_compressor"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "0.2"
-wasm-bindgen-futures = "0.4"
 pixlzr = "0.3.1"
 image = "0.25.5"
+rayon = "1.10.0"
 js-sys = "0.3.76"
 thiserror = "1.0.61"
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 serde = { version = "1.0.203", features = ["derive"] }
 gloo-utils = { version = "0.2.0", features = ["serde"] }
 serde_json = { version = "1.0.117", default-features = false }
